# sentinel

./: .code-review.json  .coveragerc  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.githooks/: pre-commit
.github/workflows/: code-review.yml
sentinel/agents/: best_practices.py  documentation.py  llm_review.py  security.py  static_analysis.py  style.py  summary.py
sentinel/core/: base_agent.py  context.py  orchestrator.py  types.py
sentinel/deploy/: runner.py
sentinel/govern/: context_hub.py  cost.py  registry.py
sentinel/monitor/: dashboard.py  tracer.py
sentinel/rag/: knowledge_base.py  retriever.py  vector_store.py
sentinel/reporting/: report.py
sentinel/test/: evals.py  simulations.py
sentinel/test/fixtures/: bad_code.py  good_code.py
sentinel/tools/: ast_tools.py  config.py  git_tools.py  secrets_scanner.py
tests/: test_agents.py  test_context_hub.py  test_core.py  test_cost.py  test_dashboard.py  test_edge_cases.py  test_orchestrator.py  test_rag.py  test_registry.py  test_reporting.py  test_runner.py  test_secrets_scanner.py  test_security_pentest.py  test_simulations.py  test_tools.py  test_tracer.py
