[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Autonomous code review bot with sub-agents — ADLC-inspired"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001", "ARG002", "SIM115"]
"sentinel/test/fixtures/*" = ["ALL"]
"sentinel/agents/summary.py" = ["ARG002"]

[tool.ty.environment]
python-version = "3.9"

[tool.ty.src]
exclude = ["sentinel/test/fixtures"]

[[tool.ty.overrides]]
include = ["sentinel/agents/style.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[tool.coverage.run]
source = ["sentinel"]
omit = [
    "sentinel/test/*",
    "sentinel/test/fixtures/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
skip_empty = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "pass",
    "except ImportError",
    "except SyntaxError",
    "except Exception",
]

[[tool.ty.overrides]]
include = ["sentinel/govern/registry.py"]
[tool.ty.overrides.rules]
invalid-type-form = "ignore"
